[gd_scene load_steps=4 format=3 uid="uid://cuppaeqycb55d"]

[ext_resource type="Script" path="res://script/mob_card_stand.gd" id="1_hj1u2"]
[ext_resource type="Texture2D" uid="uid://c5uc0lle6najj" path="res://png/pixelCardAssest_V01.png" id="1_wlcnj"]
[ext_resource type="PackedScene" uid="uid://yc8ksmfvh0fw" path="res://mob.tscn" id="3_2ml4y"]

[node name="mob_card_stand" type="Node2D"]
script = ExtResource("1_hj1u2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("1_wlcnj")
region_enabled = true
region_rect = Rect2(135, 224, 96, 29)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="mob1" parent="." instance=ExtResource("3_2ml4y")]

[node name="mob2" parent="." instance=ExtResource("3_2ml4y")]
position = Vector2(-150, 0)

[node name="mob3" parent="." instance=ExtResource("3_2ml4y")]
position = Vector2(150, 0)
